--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "react": "^19.1.0",
